drm/i915/bxt: Broxton doesn't use gen9 scaling for rps frequencies.

Signed-off-by: Bob Paauwe <bob.j.paauwe@intel.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=92768